--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>David personal website</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>David personal website</title>
+</head>
 
 <body>
-  <table cellspacing = '20'>
+  <table cellspacing='20'>
     <tr>
-      <td><img src="images/mod.jpg" alt="OG Profile Picture"></td>
-      <td><h1>Bijendra Raut </h1>
-      <p>
-        <em>Web Developer at </em><strong><a href="https://www.linkedin.com/in/bijendra-raut267">Stalwart Esports</a></strong>.
-      </p>
-      <p>
-        IOS and Web Developer
-      </p></td>
+      <td><img src="images/dos.jpg" alt="OG Profile Picture"></td>
+      <td>
+        <h1>Bijendra Raut </h1>
+        <p>
+          <em>Web Developer at </em><strong><a href="https://www.linkedin.com/in/bijendra-raut267">Stalwart Esports</a></strong>.
+        </p>
+        <p>
+          IOS and Web Developer
+        </p>
+      </td>
     </tr>
   </table>
 
@@ -27,7 +29,7 @@
   </ul>
   <hr>
   <h3>Work Experience</h3>
-  <table cellspacing = '10'>
+  <table cellspacing='10'>
     <thead>
       <tr>
         <th>Date</th>
@@ -47,27 +49,27 @@
   </table>
   <hr>
   <h3>Skills</h3>
-  <table cellspacing = '10'>
-  <tr>
-    <td>IOS Developer</td>
-    <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
-  </tr>
-  <tr>
-    <td>HTML</td>
-    <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
-  </tr>
-  <tr>
-    <td>SQL</td>
-    <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
-  </tr>
-  <tr>
-    <td>CSS</td>
-    <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
-  </tr>
-  <tr>
-    <td>Python</td>
-    <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
-  </tr>
+  <table cellspacing='10'>
+    <tr>
+      <td>IOS Developer</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
+    </tr>
+    <tr>
+      <td>SQL</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
+    </tr>
+    <tr>
+      <td>Python</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️ </td>
+    </tr>
   </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a>
